# PhotoLab

./: .gitignore
src/: CMakeLists.txt  Makefile  a.out  main.cc
src/Controler/: Controler.h  controler.cc  controler.h
src/Model/: Model.cc  Model.h
src/View/: Makefile  View.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_matrix_mode.cpp  ui_mainwindow.h  ui_matrix_mode.h
src/View/.qtc_clangd/: compile_commands.json
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/backend/: CMakeLists.txt
src/backend/includes/: Model.h
src/backend/src/: Model.cc
src/easy_bmp/: CMakeLists.txt
src/photo_lab/: CMakeLists.txt
src/photo_lab/UI/: mainwindow.ui  matrix_mode.ui  matrix_table.ui
src/photo_lab/includes/: controler.h  controler_button.h  controler_commands.h  controler_slider.h  mainwindow.h  matrix_mode.h  qolorbutton.h  qolordialog.h
src/photo_lab/src/: controler.cc  main.cc  main.cpp  mainwindow.cc  matrix_mode.cc  qolorbutton.cc
src/tests/: CMakeLists.txt
src/tests/src/: test.cc
